# picachain

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: image_search_engine_with_chromadb.ipynb
picachain/: pydantic.py
picachain/chains/: chain.py  image_chain.py
picachain/chains/image_search/: search.py
picachain/datastore/: __init__.py  chroma.py  datastore.py  pinecone.py
picachain/embedding/: __init__.py  clip_embedding.py  embedding.py
picachain/extraction/: __init__.py  donut.py  extraction.py
picachain/extraction/donut/: __init__.py  classification.py  cord.py  docvqa.py
picachain/extraction/llava/: llava.py
picachain/generation/: text2image.py
picachain/models/: __init__.py
picachain/models/deplot/: deplot.py
picachain/models/donut/: __init__.py  classification.py  cord.py  docvqa.py
picachain/models/llava/: llava.py
picachain/retriever/: __init__.py  image_retriever.py  retriever.py
picachain/search/: __init__.py  image_search.py
picachain/unstructured/: charts.py  tables.py
picachain/utils/: image_util.py
